--- a/public/sass/globals/_colors.scss
+++ b/public/sass/globals/_colors.scss
@@ -4,5 +4,18 @@ $colors:(
     "secondary" : rgb(154, 153, 153),
     "success" : rgb(84, 211, 84),
     "warning" : rgb(248, 248, 72),
-    "danger" : rgb(254, 68, 68)
+    "danger" : rgb(254, 68, 68),
+    "dark" : black,
+    "light" : white
 );
+
+// Create Background Color.
+@each $key, $val in $colors {
+    @for $i from 0 to 9 {
+        .bg-#{$key}-light-#{$i}
+        {
+            background: mix(#000000, $val, $i*10)
+        }
+    }    
+}
+
