--- a/public/sass/globals/_typography.scss
+++ b/public/sass/globals/_typography.scss
@@ -1,5 +1,6 @@
 @use 'colors';
-h1,h2,h3,h4,h5,h6
+
+:is(h1,h2,h3,h4,h5,h6)
 {
     margin-top: 0;
 }
@@ -7,6 +8,13 @@ h1,h2,h3,h4,h5,h6
 p
 {
     margin-top: 0;
+    
+}
+
+:is(a, a:visited)
+{
+    color: map-get(colors.$colors, "dark");
+    text-decoration: none;
 }
 
 @each $key, $val in colors.$colors {
